# tinkoff_fintech

./: LICENSE  README.md
final_project/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
final_project/app/: app.py  deps.py  endpoints.py  exceptions.py  schemas.py  settings.py
final_project/app/db/: __init__.py  init_db.py  models.py  session.py
final_project/tests/: conftest.py  test_deps.py  test_endpoints.py  test_settings.py
homework1/: README.md
homework1/battleship/: __main__.py  exceptions.py  game.py  grid.py  player.py  ships.py  utils.py
homework2/: Makefile  README.md  requirements.txt  setup.cfg  setup.py
homework2/myapp/: app.py
homework2/tests/: conftest.py  test_myapp.py
homework3/: .gitlab-ci.yml  Makefile  README.md  config.py  pyproject.toml  setup.cfg
homework3/tests/: conftest.py  test_app.py  test_views.py
homework3/todo_list/: app.py  database_extensions.py  jinja_extensions.py  models.py  utils.py  views.py
homework4/: Makefile  README.md  config.py  pyproject.toml  setup.cfg
homework4/app/: app.py  bot.py  cli.py  currency_checker.py  database.py  models.py  schemas.py  utils.py  views.py
homework4/tests/: conftest.py  test_app.py  test_bot.py  test_cli.py  (+3 more)
homework5/: Makefile  README.md  pre_start.py  pyproject.toml  setup.cfg
homework5/app/: admin.py  auth.py  config.py  deps.py  endpoints.py  exceptions.py  schemas.py  utils.py
homework5/app/db/: __init__.py  init_db.py  models.py  session.py
homework5/tests/: conftest.py  test_app.py  test_endpoints.py
homework6/: Makefile  README.md  docker-compose.yml  pyproject.toml
homework7/: Makefile  pyproject.toml  setup.cfg
homework7/app/: __main__.py  connection.py  data.py  executor.py  exporter.py  main.py  parser.py  utils.py
homework7/tests/: conftest.py  main_page1.html  main_page2.html  post1.html  post1.txt  test_connection.py  test_executor.py  test_exporter.py  test_main.py  test_parser.py  test_utils.py
homework8/: .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
(+31 files in other folders)
