[tool.poetry]
name = "final_project"
version = "0.1.0"
description = ""
authors = ["sakost <sakost01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
typer = "^0.3.2"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.13"
black = "^21.5b0"
isort = "^5.8.0"
autoflake = "^1.4"
unify = "^0.5"
flake8 = "^3.9.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"
pylint = "^2.8.2"
black = "^21.5b0"
isort = "^5.8.0"
autoflake = "^1.4"
unify = "^0.5"
flake8 = "^3.9.1"
pytest-cov = "^2.11.1"
pytest-deadfixtures = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
