[tool.poetry]
name = "homework7"
version = "0.1.0"
description = ""
authors = ["sakost <sakost01@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
autoflake = "^1.4"
isort = "^5.8.0"
black = "^20.8b1"
unify = "^0.5"
flake8 = "^3.9.1"
pylint = "^2.7.4"
mypy = "^0.812"
pytest-deadfixtures = "^2.2.1"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
